feat/request/render/create/edit/delete/exercise-resolve

--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/styles/reset.css">
     <link rel="stylesheet" href="./src/styles/styleBase.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
     <title>Entrega Lista de Clientes - listar</title>
 </head>
 <body>
     <header>
         <ul>
-            <li><a href="">Listar Clientes</a></li>
-            <li><a href="./src/pages/cadastrar.html">Criar Clientes</a></li>
-            <li><a href="./src/pages/editar.html">Editar Clientes</a></li>
-            <li><a href="./src/pages/deletar.html">Deletar Clientes</a></li>
+            <li> <a class="link"  href="">Listar Clientes</a></li>
+            <li> <a class="link" href="./src/pages/cadastrar.html">Criar Clientes</a></li>
+            <li> <a class="link" href="./src/pages/editar.html">Editar Clientes</a></li>
+            <li> <a class="link" href="./src/pages/deletar.html">Deletar Clientes</a></li>
+
         </ul>
     </header>
 
@@ -31,6 +35,7 @@
                 <p>sexo: Masculino</p>
 
             </div>
+
             <div>
                 <h3>Endereco</h3>
                 <p>cep: 38055292</p>
@@ -44,6 +49,8 @@
         </li>
     -->
     </ul>
+
+    <script type="module" src="./main.js"> </script>
 
 </body>
 </html>
